[package]
name = "ratmir_oc"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.30.0" }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "x86_64-unknown-uefi"

[unstable]
build-std = ["core", "compiler_builtins", "alloc"]
build-std-features = ["compiler-builtins-mem"]